SLING-3569 - Fix test suite on Windows
Ensure that the test Eclipse instance has enough PermGen.

git-svn-id: https://svn.apache.org/repos/asf/sling/trunk/tooling/ide@1595263 13f79535-47bb-0310-9956-ffa450edef68